# scare

./: Cargo.toml  README.md
src/: main.rs  setup.rs  tasks.rs  ui.rs  utils.rs
